# pe-nfc

./: Cargo.toml
examples/: reset_uid.rs  set_uid.rs
src/: error.rs  hci.rs  lib.rs  types.rs
