[package]
name = "pe-nfc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.3"
thiserror = "1.0.37"

[dev-dependencies]
clap = { version = "4.0.11", features = ["derive"] }
hex = "0.4.3"
